--- a/app/.env
+++ b/app/.env
@@ -1,9 +1,7 @@
-EMBEDDING_MODEL="BAAI/bge-small-en"
-NEO4J_URI=
+EMBEDDING_MODEL="BAAI/bge-small-en-v1.5"
+NEO4J_URI=bolt://neo:7687
 NEO4J_USERNAME=
 NEO4J_PASSWORD=
-AURA_INSTANCEID=
-AURA_INSTANCENAME=
 NEO4J_DB="neo4j"
 NEO4J_INDEX="movies"
 NEO4J_NODE_LABEL="movieArticle"
