--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,22 @@ services:
     container_name: app
     ports:
       - 8083:8081
-    network_mode: bridge
+    depends_on:
+      - neo
+  neo:
+    # The image to use
+    image: neo4j:latest
+    # map the ports so we can check the db server is up
+    ports:
+      - 7474:7474
+      - 7687:7687
+    # mounting a named volume to the container to track db data
+    volumes:
+      - neo4j_data:/data/
+    env_file:
+      - .env.neo4j
 
 volumes:
+  neo4j_data:
   app:
 
